--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Jeff Shelton</div>
+        <div class="logo">Jeff Shelton Okang'a</div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
